created script to generate dataset for recommendations

--- a/rec_sys/data/generate_data.ipynb
+++ b/rec_sys/data/generate_data.ipynb
@@ -16,57 +16,54 @@
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "import numpy as np\n",
-    "import random"
+    "from random import randint"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "b440b32c-93c1-41df-8a93-9208549fed9b",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def generate_data():\n",
+    "def generate_data(n_books = 3000, n_genres = 10, n_authors = 450, n_publishers = 50, n_readers = 30000, dataset_size = 100000):\n",
     "    '''\n",
     "    This function will generate a dataset with features associated to\n",
     "    book data set. The dataset will have the following columns : \n",
-    "        - book_uuid (String) : Unique identified for the book\n",
-    "        - book_rating (Integer) : A value between 0 and 10, can be NaN for situations when \n",
-    "                                  empty users do not rate a book\n",
-    "        - reader_uuid (String) : Unique identifier for the user\n",
-    "        - book_genre (Integer) : An integer representing a genre for the book, value is between\n",
-    "                                 1 and 15, indicating that there are 15 unique genres. Each book\n",
-    "                                 can only have 1 genre\n",
-    "        - author_uuid (String) : Unique identifier for the author of the book\n",
+    "        - book_id (String) : Unique identified for the book\n",
+    "        - book_rating (Integer) : A value between 0 and 10\n",
+    "        - reader_id (String) : Unique identifier for the user\n",
+    "        - book_genre (Integer) : An integer representing a genre for the book, \n",
+    "                                 value is between 1 and 15, indicating that \n",
+    "                                 there are 15 unique genres. Each book can only\n",
+    "                                 have 1 genre\n",
+    "        - author_id (String) : Unique identifier for the author of the book\n",
     "        - num_pages (Integer) : Random value between 70 and 500\n",
-    "        - publisher_uuid (String) : A unique identifier for the publisher of the book\n",
+    "        - publisher_id (String) : A unique identifier for the publisher of the book\n",
     "        - publish_year (Integer) : The year of book publishing\n",
+    "        \n",
+    "    params:\n",
+    "        n_books (Integer) : The number of books you want the dataset to have\n",
+    "        n_genres (Integer) : Number of genres to be chosen from\n",
+    "        n_authors (Integer) : Number of authors to be generated\n",
+    "        n_publishers (Integer) : Number of publishers for the dataset\n",
+    "        n_readers (Integer) : Number of readers for the dataset\n",
+    "        dataset_size (Integer) : The number of rows to be generated \n",
     "        \n",
     "    example:\n",
     "        data = generate_data()\n",
     "    '''\n",
     "    \n",
-    "    \n",
-    "    return"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "1c762ab8-2d56-4eb5-96b0-047a6234538b",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def sample_events():\n",
-    "    event_types = ['A', 'B', 'C', 'D']\n",
-    "    n = 100\n",
     "    d = pd.DataFrame(\n",
     "        {\n",
-    "            'artist_id' : [randint(1, 100) for _ in range(n)],\n",
-    "            'institution_id' : [randint(101, 110) for _ in range(n)],\n",
-    "            'event_year' : [randint(2000, 2020) for _ in range(n)],\n",
-    "            'event_type' : [choice(event_types) for _ in range(n)]\n",
+    "            'book_id' : [randint(1, n_books) for _ in range(dataset_size)],\n",
+    "            'author_id' : [randint(1, n_authors) for _ in range(dataset_size)],\n",
+    "            'book_genre' : [randint(1, n_genres) for _ in range(dataset_size)],\n",
+    "            'reader_id' : [randint(1, n_readers) for _ in range(dataset_size)],\n",
+    "            'num_pages' : [randint(75, 700) for _ in range(dataset_size)],\n",
+    "            'book_rating' : [randint(1, 10) for _ in range(dataset_size)],\n",
+    "            'publisher_id' : [randint(1, n_publishers) for _ in range(dataset_size)],\n",
+    "            'publish_year' : [randint(2000, 2021) for _ in range(dataset_size)]\n",
     "        }\n",
     "    ).drop_duplicates()\n",
     "    return d"
@@ -74,11 +71,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "cd871733-bd23-459e-9a88-14a505086f5a",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "d = generate_data(dataset_size = 300000)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "45a2c91b-7f69-4c20-98d9-db89ca586401",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "d.to_csv('data.csv', index = False)"
+   ]
   }
  ],
  "metadata": {
