added bayesian a/b testing article

--- a/rec_sys/data/generate_data.ipynb
+++ b/rec_sys/data/generate_data.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "ebac792f-0825-4226-b4ce-b4d87ebfec89",
    "metadata": {},
    "outputs": [],
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "b440b32c-93c1-41df-8a93-9208549fed9b",
    "metadata": {},
    "outputs": [],
@@ -41,6 +41,7 @@
     "        - num_pages (Integer) : Random value between 70 and 500\n",
     "        - publisher_id (String) : A unique identifier for the publisher of the book\n",
     "        - publish_year (Integer) : The year of book publishing\n",
+    "        - book_price (Integer) : The sale price of the book\n",
     "        \n",
     "    params:\n",
     "        n_books (Integer) : The number of books you want the dataset to have\n",
@@ -63,7 +64,8 @@
     "            'num_pages' : [randint(75, 700) for _ in range(dataset_size)],\n",
     "            'book_rating' : [randint(1, 10) for _ in range(dataset_size)],\n",
     "            'publisher_id' : [randint(1, n_publishers) for _ in range(dataset_size)],\n",
-    "            'publish_year' : [randint(2000, 2021) for _ in range(dataset_size)]\n",
+    "            'publish_year' : [randint(2000, 2021) for _ in range(dataset_size)],\n",
+    "            'book_price' : [randint(1, 200) for _ in range(dataset_size)]\n",
     "        }\n",
     "    ).drop_duplicates()\n",
     "    return d"
@@ -71,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "id": "cd871733-bd23-459e-9a88-14a505086f5a",
    "metadata": {},
    "outputs": [],
@@ -81,13 +83,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "id": "45a2c91b-7f69-4c20-98d9-db89ca586401",
    "metadata": {},
    "outputs": [],
    "source": [
     "d.to_csv('data.csv', index = False)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "955b482f-e55c-41be-b7f0-8c470cb2c603",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
