updated rec sys experiements

--- a/rec_sys/content_based/content_based.ipynb
+++ b/rec_sys/content_based/content_based.ipynb
@@ -5,7 +5,7 @@
    "id": "5bbaa6a1-b519-4cd7-afa5-ca1aeceee2d2",
    "metadata": {},
    "source": [
-    "# Collaborative Filtering"
+    "# Content Based System"
    ]
   },
   {
@@ -281,7 +281,7 @@
    "outputs": [],
    "source": [
     "# drop redundant columns\n",
-    "cols = ['publish_year', 'book_genre', 'num_pages', 'book_rating', 'book_price', 'author_id', 'reader_id', 'publisher_id']\n",
+    "cols = ['publish_year', 'book_genre', 'num_pages', 'book_rating', 'book_price']\n",
     "df.drop(columns = cols, inplace = True)\n",
     "df.set_index('book_id', inplace = True)"
    ]
@@ -302,7 +302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 11,
    "id": "6e561505-fe9d-4e00-a971-e197fe57e30f",
    "metadata": {},
    "outputs": [],
@@ -322,16 +322,6 @@
    "cell_type": "code",
    "execution_count": 12,
    "id": "da26e6da-5837-4eac-8529-0ba2cf98b6c3",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "t = df.sample(1000).copy()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "id": "7762dffe-c4ad-454c-a21f-3a5eb52ef46f",
    "metadata": {},
    "outputs": [
     {
@@ -355,6 +345,9 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
+       "      <th>author_id</th>\n",
+       "      <th>reader_id</th>\n",
+       "      <th>publisher_id</th>\n",
        "      <th>num_pages_norm</th>\n",
        "      <th>book_rating_norm</th>\n",
        "      <th>book_price_norm</th>\n",
@@ -362,9 +355,6 @@
        "      <th>2001</th>\n",
        "      <th>2002</th>\n",
        "      <th>2003</th>\n",
-       "      <th>2004</th>\n",
-       "      <th>2005</th>\n",
-       "      <th>2006</th>\n",
        "      <th>...</th>\n",
        "      <th>2</th>\n",
        "      <th>3</th>\n",
@@ -404,13 +394,13 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>816</th>\n",
-       "      <td>0.124286</td>\n",
-       "      <td>0.9</td>\n",
-       "      <td>0.820</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
+       "      <th>1783</th>\n",
+       "      <td>146</td>\n",
+       "      <td>697</td>\n",
+       "      <td>12</td>\n",
+       "      <td>0.437143</td>\n",
+       "      <td>0.7</td>\n",
+       "      <td>0.48</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
@@ -421,20 +411,20 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>0</td>\n",
+       "      <td>1</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>1.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>503</th>\n",
-       "      <td>0.307143</td>\n",
-       "      <td>0.6</td>\n",
-       "      <td>0.030</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
+       "      <th>2407</th>\n",
+       "      <td>162</td>\n",
+       "      <td>756</td>\n",
+       "      <td>11</td>\n",
+       "      <td>0.511429</td>\n",
+       "      <td>0.2</td>\n",
+       "      <td>0.51</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
@@ -447,66 +437,66 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
+       "      <td>1</td>\n",
        "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.913891</td>\n",
+       "      <td>0.999982</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>18</th>\n",
-       "      <td>0.160000</td>\n",
-       "      <td>0.9</td>\n",
-       "      <td>0.935</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
+       "      <th>1329</th>\n",
+       "      <td>268</td>\n",
+       "      <td>1256</td>\n",
+       "      <td>27</td>\n",
+       "      <td>0.391429</td>\n",
+       "      <td>0.7</td>\n",
+       "      <td>0.57</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.760600</td>\n",
+       "      <td>0.999982</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1830</th>\n",
-       "      <td>0.221429</td>\n",
-       "      <td>0.8</td>\n",
-       "      <td>0.920</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.753673</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>783</th>\n",
-       "      <td>0.534286</td>\n",
+       "      <th>1979</th>\n",
+       "      <td>400</td>\n",
+       "      <td>1831</td>\n",
+       "      <td>25</td>\n",
+       "      <td>0.375714</td>\n",
        "      <td>1.0</td>\n",
-       "      <td>0.855</td>\n",
+       "      <td>0.82</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.999954</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2047</th>\n",
+       "      <td>215</td>\n",
+       "      <td>983</td>\n",
+       "      <td>12</td>\n",
+       "      <td>0.565714</td>\n",
+       "      <td>0.2</td>\n",
+       "      <td>0.77</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
@@ -519,51 +509,53 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
+       "      <td>1</td>\n",
        "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.749199</td>\n",
+       "      <td>0.999947</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>5 rows × 36 columns</p>\n",
+       "<p>5 rows × 39 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "         num_pages_norm  book_rating_norm  book_price_norm  2000  2001  2002  \\\n",
-       "book_id                                                                        \n",
-       "816            0.124286               0.9            0.820     0     0     0   \n",
-       "503            0.307143               0.6            0.030     0     0     0   \n",
-       "18             0.160000               0.9            0.935     0     0     0   \n",
-       "1830           0.221429               0.8            0.920     0     0     0   \n",
-       "783            0.534286               1.0            0.855     0     0     0   \n",
+       "         author_id  reader_id  publisher_id  num_pages_norm  book_rating_norm  \\\n",
+       "book_id                                                                         \n",
+       "1783           146        697            12        0.437143               0.7   \n",
+       "2407           162        756            11        0.511429               0.2   \n",
+       "1329           268       1256            27        0.391429               0.7   \n",
+       "1979           400       1831            25        0.375714               1.0   \n",
+       "2047           215        983            12        0.565714               0.2   \n",
        "\n",
-       "         2003  2004  2005  2006  ...  2  3  4  5  6  7  8  9  10       sim  \n",
-       "book_id                          ...                                        \n",
-       "816         0     0     0     0  ...  0  0  0  0  0  0  0  0   0  1.000000  \n",
-       "503         0     0     0     0  ...  0  0  0  0  0  0  0  0   0  0.913891  \n",
-       "18          0     0     0     0  ...  0  0  0  1  0  0  0  0   0  0.760600  \n",
-       "1830        0     0     0     0  ...  1  0  0  0  0  0  0  0   0  0.753673  \n",
-       "783         0     0     0     0  ...  0  0  0  0  0  0  0  0   0  0.749199  \n",
+       "         book_price_norm  2000  2001  2002  2003  ...  2  3  4  5  6  7  8  9  \\\n",
+       "book_id                                           ...                           \n",
+       "1783                0.48     0     0     0     0  ...  0  0  0  0  0  1  0  0   \n",
+       "2407                0.51     0     0     0     0  ...  0  0  0  0  0  0  0  1   \n",
+       "1329                0.57     0     0     0     0  ...  0  0  0  0  0  0  1  0   \n",
+       "1979                0.82     0     0     0     0  ...  0  1  0  0  0  0  0  0   \n",
+       "2047                0.77     0     0     0     0  ...  0  0  0  0  0  0  0  1   \n",
        "\n",
-       "[5 rows x 36 columns]"
+       "         10       sim  \n",
+       "book_id                \n",
+       "1783      0  1.000000  \n",
+       "2407      0  0.999982  \n",
+       "1329      0  0.999982  \n",
+       "1979      0  0.999954  \n",
+       "2047      0  0.999947  \n",
+       "\n",
+       "[5 rows x 39 columns]"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "recommend(t, 816, 5)"
+    "# run on a sample for quick results\n",
+    "t = df.sample(1000).copy()\n",
+    "recommend(t, t.index[0], 5)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "29f547a0-d1d8-432a-a904-197a4a732b8b",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
