updated data generation script to include languages in dataset

--- a/rec_sys/data/generate_data.ipynb
+++ b/rec_sys/data/generate_data.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "ebac792f-0825-4226-b4ce-b4d87ebfec89",
    "metadata": {},
    "outputs": [],
@@ -42,6 +42,8 @@
     "        - publisher_id (String) : A unique identifier for the publisher of the book\n",
     "        - publish_year (Integer) : The year of book publishing\n",
     "        - book_price (Integer) : The sale price of the book\n",
+    "        - text_lang (Integer) : The language of the book - returns an integer which \n",
+    "                                is mapped to some language\n",
     "        \n",
     "    params:\n",
     "        n_books (Integer) : The number of books you want the dataset to have\n",
@@ -65,7 +67,8 @@
     "            'book_rating' : [randint(1, 10) for _ in range(dataset_size)],\n",
     "            'publisher_id' : [randint(1, n_publishers) for _ in range(dataset_size)],\n",
     "            'publish_year' : [randint(2000, 2021) for _ in range(dataset_size)],\n",
-    "            'book_price' : [randint(1, 200) for _ in range(dataset_size)]\n",
+    "            'book_price' : [randint(1, 200) for _ in range(dataset_size)],\n",
+    "            'text_lang' : [randint(1,7) for _ in range(dataset_size)]\n",
     "        }\n",
     "    ).drop_duplicates()\n",
     "    return d"
@@ -78,7 +81,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "d = generate_data(dataset_size = 300000)"
+    "d = generate_data(dataset_size = 100000)"
    ]
   },
   {
@@ -94,7 +97,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "955b482f-e55c-41be-b7f0-8c470cb2c603",
+   "id": "a7f415ea-d5e8-4de2-8139-273c9037a214",
    "metadata": {},
    "outputs": [],
    "source": []
