--- a/rec_sys/content_based/content_based.ipynb
+++ b/rec_sys/content_based/content_based.ipynb
@@ -49,7 +49,7 @@
     {
      "data": {
       "text/plain": [
-       "(300000, 9)"
+       "(100000, 10)"
       ]
      },
      "execution_count": 3,
@@ -98,68 +98,74 @@
        "      <th>publisher_id</th>\n",
        "      <th>publish_year</th>\n",
        "      <th>book_price</th>\n",
+       "      <th>text_lang</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>45</td>\n",
-       "      <td>446</td>\n",
-       "      <td>2</td>\n",
-       "      <td>2272</td>\n",
-       "      <td>553</td>\n",
+       "      <td>655</td>\n",
+       "      <td>52</td>\n",
        "      <td>4</td>\n",
-       "      <td>10</td>\n",
-       "      <td>2004</td>\n",
-       "      <td>23</td>\n",
+       "      <td>11482</td>\n",
+       "      <td>300</td>\n",
+       "      <td>4</td>\n",
+       "      <td>8</td>\n",
+       "      <td>2012</td>\n",
+       "      <td>94</td>\n",
+       "      <td>7</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>2413</td>\n",
-       "      <td>23</td>\n",
-       "      <td>7</td>\n",
-       "      <td>3515</td>\n",
-       "      <td>318</td>\n",
-       "      <td>2</td>\n",
-       "      <td>38</td>\n",
-       "      <td>2015</td>\n",
-       "      <td>15</td>\n",
+       "      <td>2713</td>\n",
+       "      <td>90</td>\n",
+       "      <td>3</td>\n",
+       "      <td>6479</td>\n",
+       "      <td>469</td>\n",
+       "      <td>1</td>\n",
+       "      <td>8</td>\n",
+       "      <td>2012</td>\n",
+       "      <td>33</td>\n",
+       "      <td>5</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>2095</td>\n",
-       "      <td>431</td>\n",
-       "      <td>8</td>\n",
-       "      <td>18547</td>\n",
-       "      <td>208</td>\n",
-       "      <td>3</td>\n",
-       "      <td>48</td>\n",
-       "      <td>2000</td>\n",
-       "      <td>23</td>\n",
+       "      <td>409</td>\n",
+       "      <td>17</td>\n",
+       "      <td>2</td>\n",
+       "      <td>25472</td>\n",
+       "      <td>435</td>\n",
+       "      <td>1</td>\n",
+       "      <td>12</td>\n",
+       "      <td>2001</td>\n",
+       "      <td>196</td>\n",
+       "      <td>4</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>2431</td>\n",
-       "      <td>211</td>\n",
-       "      <td>4</td>\n",
-       "      <td>19675</td>\n",
-       "      <td>340</td>\n",
+       "      <td>1150</td>\n",
+       "      <td>234</td>\n",
        "      <td>10</td>\n",
-       "      <td>34</td>\n",
-       "      <td>2000</td>\n",
-       "      <td>117</td>\n",
+       "      <td>23950</td>\n",
+       "      <td>529</td>\n",
+       "      <td>2</td>\n",
+       "      <td>23</td>\n",
+       "      <td>2019</td>\n",
+       "      <td>79</td>\n",
+       "      <td>2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>2871</td>\n",
-       "      <td>78</td>\n",
-       "      <td>3</td>\n",
-       "      <td>23453</td>\n",
-       "      <td>610</td>\n",
+       "      <td>2424</td>\n",
+       "      <td>390</td>\n",
+       "      <td>5</td>\n",
+       "      <td>13046</td>\n",
+       "      <td>395</td>\n",
        "      <td>2</td>\n",
-       "      <td>24</td>\n",
-       "      <td>2012</td>\n",
-       "      <td>111</td>\n",
+       "      <td>20</td>\n",
+       "      <td>2010</td>\n",
+       "      <td>200</td>\n",
+       "      <td>4</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -167,18 +173,18 @@
       ],
       "text/plain": [
        "   book_id  author_id  book_genre  reader_id  num_pages  book_rating  \\\n",
-       "0       45        446           2       2272        553            4   \n",
-       "1     2413         23           7       3515        318            2   \n",
-       "2     2095        431           8      18547        208            3   \n",
-       "3     2431        211           4      19675        340           10   \n",
-       "4     2871         78           3      23453        610            2   \n",
+       "0      655         52           4      11482        300            4   \n",
+       "1     2713         90           3       6479        469            1   \n",
+       "2      409         17           2      25472        435            1   \n",
+       "3     1150        234          10      23950        529            2   \n",
+       "4     2424        390           5      13046        395            2   \n",
        "\n",
-       "   publisher_id  publish_year  book_price  \n",
-       "0            10          2004          23  \n",
-       "1            38          2015          15  \n",
-       "2            48          2000          23  \n",
-       "3            34          2000         117  \n",
-       "4            24          2012         111  "
+       "   publisher_id  publish_year  book_price  text_lang  \n",
+       "0             8          2012          94          7  \n",
+       "1             8          2012          33          5  \n",
+       "2            12          2001         196          4  \n",
+       "3            23          2019          79          2  \n",
+       "4            20          2010         200          4  "
       ]
      },
      "execution_count": 4,
@@ -256,7 +262,6 @@
     "    '''\n",
     "    \n",
     "    ohe_df = pd.get_dummies(df[enc_col])\n",
-    "    ohe_cols = ohe_df.columns\n",
     "    ohe_df.reset_index(drop = True, inplace = True)\n",
     "    return pd.concat([df, ohe_df], axis = 1)"
    ]
@@ -270,7 +275,8 @@
    "source": [
     "# OHE on publish_year and genre\n",
     "df = ohe(df = df, enc_col = 'publish_year')\n",
-    "df = ohe(df = df, enc_col = 'book_genre')"
+    "df = ohe(df = df, enc_col = 'book_genre')\n",
+    "df = ohe(df = df, enc_col = 'text_lang')"
    ]
   },
   {
@@ -281,47 +287,58 @@
    "outputs": [],
    "source": [
     "# drop redundant columns\n",
-    "cols = ['publish_year', 'book_genre', 'num_pages', 'book_rating', 'book_price']\n",
+    "cols = ['publish_year', 'book_genre', 'num_pages', 'book_rating', 'book_price', 'text_lang']\n",
     "df.drop(columns = cols, inplace = True)\n",
     "df.set_index('book_id', inplace = True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "id": "32e11260-62c4-49a0-8627-13f4d898f3a3",
+   "execution_count": 14,
+   "id": "2f19429f-2416-4597-ba5a-0b45a1bbee43",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def cosine_sim(v1,v2):\n",
-    "    '''\n",
-    "    This function will calculate the cosine similarity between two vectors\n",
-    "    '''\n",
-    "    return dot(v1,v2)/(norm(v1)*norm(v2))"
+    "class CBRecommend():\n",
+    "    def __init__(self, df):\n",
+    "        self.df = df\n",
+    "        \n",
+    "    def cosine_sim(self, v1,v2):\n",
+    "        '''\n",
+    "        This function will calculate the cosine similarity between two vectors\n",
+    "        '''\n",
+    "        return dot(v1,v2)/(norm(v1)*norm(v2))\n",
+    "    \n",
+    "    def recommend(self, book_id, n_rec):\n",
+    "        \"\"\"\n",
+    "        df (dataframe): The dataframe\n",
+    "        song_id (string): Representing the song name\n",
+    "        n_rec (int): amount of rec user wants\n",
+    "        \"\"\"\n",
+    "        \n",
+    "        # calculate similarity of input book_id vector w.r.t all other vectors\n",
+    "        inputVec = self.df.loc[book_id].values\n",
+    "        self.df['sim']= self.df.apply(lambda x: self.cosine_sim(inputVec,x.values), axis=1)\n",
+    "        \n",
+    "        # returns top n user specified books\n",
+    "        return self.df.nlargest(columns='sim',n=n_rec)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "id": "6e561505-fe9d-4e00-a971-e197fe57e30f",
+   "execution_count": 15,
+   "id": "d92bd2b6-3bef-40ea-90d5-fc5dc33c18ff",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def recommend(df, book_id, n_rec):\n",
-    "    \"\"\"\n",
-    "    df (dataframe): The dataframe\n",
-    "    song_id (string): Representing the song name\n",
-    "    n_rec (int): amount of rec user wants\n",
-    "    \"\"\"\n",
-    "    inputVec = df.loc[book_id].values\n",
-    "    df['sim']= df.apply(lambda x: cosine_sim(inputVec,x.values), axis=1)\n",
-    "    return df.nlargest(columns='sim',n=n_rec)"
+    "t = df.sample(1000).copy()\n",
+    "cbr = CBRecommend(df = t)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "id": "da26e6da-5837-4eac-8529-0ba2cf98b6c3",
+   "execution_count": 16,
+   "id": "057a915c-13c5-44e1-ab69-a57c73612159",
    "metadata": {},
    "outputs": [
     {
@@ -356,15 +373,15 @@
        "      <th>2002</th>\n",
        "      <th>2003</th>\n",
        "      <th>...</th>\n",
+       "      <th>9</th>\n",
+       "      <th>10</th>\n",
+       "      <th>1</th>\n",
        "      <th>2</th>\n",
        "      <th>3</th>\n",
        "      <th>4</th>\n",
        "      <th>5</th>\n",
        "      <th>6</th>\n",
        "      <th>7</th>\n",
-       "      <th>8</th>\n",
-       "      <th>9</th>\n",
-       "      <th>10</th>\n",
        "      <th>sim</th>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -394,13 +411,13 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>1783</th>\n",
-       "      <td>146</td>\n",
-       "      <td>697</td>\n",
-       "      <td>12</td>\n",
-       "      <td>0.437143</td>\n",
-       "      <td>0.7</td>\n",
-       "      <td>0.48</td>\n",
+       "      <th>1313</th>\n",
+       "      <td>188</td>\n",
+       "      <td>4325</td>\n",
+       "      <td>40</td>\n",
+       "      <td>0.804286</td>\n",
+       "      <td>0.3</td>\n",
+       "      <td>0.055</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
@@ -411,44 +428,44 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
        "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>1.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2407</th>\n",
-       "      <td>162</td>\n",
-       "      <td>756</td>\n",
-       "      <td>11</td>\n",
-       "      <td>0.511429</td>\n",
-       "      <td>0.2</td>\n",
-       "      <td>0.51</td>\n",
+       "      <th>2971</th>\n",
+       "      <td>194</td>\n",
+       "      <td>4405</td>\n",
+       "      <td>35</td>\n",
+       "      <td>0.562857</td>\n",
+       "      <td>0.8</td>\n",
+       "      <td>0.370</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>...</td>\n",
        "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
+       "      <td>1</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
-       "      <td>0.999982</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.999999</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1329</th>\n",
-       "      <td>268</td>\n",
-       "      <td>1256</td>\n",
-       "      <td>27</td>\n",
-       "      <td>0.391429</td>\n",
-       "      <td>0.7</td>\n",
-       "      <td>0.57</td>\n",
+       "      <th>1893</th>\n",
+       "      <td>96</td>\n",
+       "      <td>2121</td>\n",
+       "      <td>16</td>\n",
+       "      <td>0.661429</td>\n",
+       "      <td>0.9</td>\n",
+       "      <td>0.745</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
@@ -456,28 +473,30 @@
        "      <td>...</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>0.999982</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.999996</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1979</th>\n",
-       "      <td>400</td>\n",
-       "      <td>1831</td>\n",
-       "      <td>25</td>\n",
-       "      <td>0.375714</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.82</td>\n",
+       "      <th>87</th>\n",
+       "      <td>305</td>\n",
+       "      <td>7083</td>\n",
+       "      <td>46</td>\n",
+       "      <td>0.995714</td>\n",
+       "      <td>0.3</td>\n",
+       "      <td>0.880</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
@@ -485,85 +504,73 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.999954</td>\n",
+       "      <td>0.999996</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2047</th>\n",
-       "      <td>215</td>\n",
-       "      <td>983</td>\n",
-       "      <td>12</td>\n",
-       "      <td>0.565714</td>\n",
-       "      <td>0.2</td>\n",
-       "      <td>0.77</td>\n",
+       "      <th>976</th>\n",
+       "      <td>340</td>\n",
+       "      <td>7588</td>\n",
+       "      <td>50</td>\n",
+       "      <td>0.635714</td>\n",
+       "      <td>0.8</td>\n",
+       "      <td>0.885</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>0</td>\n",
+       "      <td>1</td>\n",
        "      <td>...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
+       "      <td>1</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
-       "      <td>0.999947</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.999995</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>5 rows × 39 columns</p>\n",
+       "<p>5 rows × 46 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
        "         author_id  reader_id  publisher_id  num_pages_norm  book_rating_norm  \\\n",
        "book_id                                                                         \n",
-       "1783           146        697            12        0.437143               0.7   \n",
-       "2407           162        756            11        0.511429               0.2   \n",
-       "1329           268       1256            27        0.391429               0.7   \n",
-       "1979           400       1831            25        0.375714               1.0   \n",
-       "2047           215        983            12        0.565714               0.2   \n",
+       "1313           188       4325            40        0.804286               0.3   \n",
+       "2971           194       4405            35        0.562857               0.8   \n",
+       "1893            96       2121            16        0.661429               0.9   \n",
+       "87             305       7083            46        0.995714               0.3   \n",
+       "976            340       7588            50        0.635714               0.8   \n",
        "\n",
-       "         book_price_norm  2000  2001  2002  2003  ...  2  3  4  5  6  7  8  9  \\\n",
-       "book_id                                           ...                           \n",
-       "1783                0.48     0     0     0     0  ...  0  0  0  0  0  1  0  0   \n",
-       "2407                0.51     0     0     0     0  ...  0  0  0  0  0  0  0  1   \n",
-       "1329                0.57     0     0     0     0  ...  0  0  0  0  0  0  1  0   \n",
-       "1979                0.82     0     0     0     0  ...  0  1  0  0  0  0  0  0   \n",
-       "2047                0.77     0     0     0     0  ...  0  0  0  0  0  0  0  1   \n",
+       "         book_price_norm  2000  2001  2002  2003  ...  9  10  1  2  3  4  5  \\\n",
+       "book_id                                           ...                         \n",
+       "1313               0.055     0     0     0     0  ...  0   0  0  0  0  0  0   \n",
+       "2971               0.370     0     0     0     0  ...  0   1  0  0  0  1  0   \n",
+       "1893               0.745     0     0     0     0  ...  0   0  1  0  0  0  0   \n",
+       "87                 0.880     0     0     0     0  ...  0   0  0  1  0  0  0   \n",
+       "976                0.885     0     0     0     1  ...  1   0  0  0  1  0  0   \n",
        "\n",
-       "         10       sim  \n",
-       "book_id                \n",
-       "1783      0  1.000000  \n",
-       "2407      0  0.999982  \n",
-       "1329      0  0.999982  \n",
-       "1979      0  0.999954  \n",
-       "2047      0  0.999947  \n",
+       "         6  7       sim  \n",
+       "book_id                  \n",
+       "1313     1  0  1.000000  \n",
+       "2971     0  0  0.999999  \n",
+       "1893     0  0  0.999996  \n",
+       "87       0  0  0.999996  \n",
+       "976      0  0  0.999995  \n",
        "\n",
-       "[5 rows x 39 columns]"
+       "[5 rows x 46 columns]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# run on a sample for quick results\n",
-    "t = df.sample(1000).copy()\n",
-    "recommend(t, t.index[0], 5)"
+    "cbr.recommend(book_id = t.index[0], n_rec = 5)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "7e9019b8-355f-423d-b490-090a9f523644",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
