--- a/rec_sys/collborative_filtering/col_filter.ipynb
+++ b/rec_sys/collborative_filtering/col_filter.ipynb
@@ -287,7 +287,7 @@
     {
      "data": {
       "text/plain": [
-       "2.913434399467405"
+       "2.913154075339419"
       ]
      },
      "execution_count": 10,
@@ -420,7 +420,7 @@
        "      <td>NaN</td>\n",
        "      <td>...</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>1.0</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
@@ -519,7 +519,7 @@
        "book_id    2991  2992  2993  2994  2995  2996  2997  2998  2999  3000  \n",
        "reader_id                                                              \n",
        "1           NaN   NaN   NaN   NaN   NaN   NaN   NaN   NaN   NaN   NaN  \n",
-       "3           NaN   1.0   NaN   NaN   NaN   NaN   NaN   NaN   NaN   NaN  \n",
+       "3           NaN   NaN   NaN   NaN   NaN   NaN   NaN   NaN   NaN   NaN  \n",
        "4           NaN   NaN   NaN   NaN   NaN   NaN   NaN   NaN   NaN   NaN  \n",
        "5           NaN   NaN   NaN   NaN   NaN   NaN   NaN   NaN   NaN   NaN  \n",
        "6           NaN   NaN   NaN   NaN   NaN   NaN   NaN   NaN   NaN   NaN  \n",
@@ -578,7 +578,7 @@
     {
      "data": {
       "text/plain": [
-       "2.9376175449119035"
+       "2.9400202223375866"
       ]
      },
      "execution_count": 13,
@@ -652,7 +652,6 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th>reader_id</th>\n",
        "      <th>1</th>\n",
-       "      <th>2</th>\n",
        "      <th>3</th>\n",
        "      <th>4</th>\n",
        "      <th>5</th>\n",
@@ -661,7 +660,9 @@
        "      <th>8</th>\n",
        "      <th>9</th>\n",
        "      <th>10</th>\n",
+       "      <th>11</th>\n",
        "      <th>...</th>\n",
+       "      <th>29990</th>\n",
        "      <th>29991</th>\n",
        "      <th>29992</th>\n",
        "      <th>29993</th>\n",
@@ -671,7 +672,6 @@
        "      <th>29997</th>\n",
        "      <th>29998</th>\n",
        "      <th>29999</th>\n",
-       "      <th>30000</th>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>reader_id</th>\n",
@@ -709,38 +709,14 @@
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
        "      <td>...</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.082107</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.000000</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
@@ -750,7 +726,6 @@
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
        "      <td>1.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
@@ -758,13 +733,14 @@
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
        "      <td>...</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>0.000000</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>0.000000</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
@@ -775,20 +751,20 @@
        "      <th>4</th>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
        "      <td>1.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
        "      <td>...</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>0.000000</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>0.000000</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
@@ -800,19 +776,19 @@
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
        "      <td>1.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
        "      <td>...</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>0.016757</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>0.000000</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
@@ -825,18 +801,18 @@
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
        "      <td>1.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
        "      <td>...</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>0.000000</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>0.000000</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
@@ -850,17 +826,17 @@
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
        "      <td>1.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
        "      <td>...</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>0.000000</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>0.000000</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
@@ -875,16 +851,16 @@
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
        "      <td>1.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
        "      <td>...</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>0.000000</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>0.000000</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
@@ -900,15 +876,15 @@
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
        "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
        "      <td>...</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>0.000000</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>0.000000</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
@@ -925,14 +901,38 @@
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.328266</td>\n",
        "      <td>...</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>0.000000</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>0.000000</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.328266</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
@@ -941,40 +941,39 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>10 rows × 29975 columns</p>\n",
+       "<p>10 rows × 27027 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "reader_id  1      2      3      4      5      6      7      8      9      \\\n",
-       "reader_id                                                                  \n",
-       "1            1.0    0.0    0.0    0.0    0.0    0.0    0.0    0.0    0.0   \n",
-       "2            0.0    1.0    0.0    0.0    0.0    0.0    0.0    0.0    0.0   \n",
-       "3            0.0    0.0    1.0    0.0    0.0    0.0    0.0    0.0    0.0   \n",
-       "4            0.0    0.0    0.0    1.0    0.0    0.0    0.0    0.0    0.0   \n",
-       "5            0.0    0.0    0.0    0.0    1.0    0.0    0.0    0.0    0.0   \n",
-       "6            0.0    0.0    0.0    0.0    0.0    1.0    0.0    0.0    0.0   \n",
-       "7            0.0    0.0    0.0    0.0    0.0    0.0    1.0    0.0    0.0   \n",
-       "8            0.0    0.0    0.0    0.0    0.0    0.0    0.0    1.0    0.0   \n",
-       "9            0.0    0.0    0.0    0.0    0.0    0.0    0.0    0.0    1.0   \n",
-       "10           0.0    0.0    0.0    0.0    0.0    0.0    0.0    0.0    0.0   \n",
+       "reader_id  1      3      4      5      6      7      8      9         10     \\\n",
+       "reader_id                                                                     \n",
+       "1            1.0    0.0    0.0    0.0    0.0    0.0    0.0    0.0  0.000000   \n",
+       "3            0.0    1.0    0.0    0.0    0.0    0.0    0.0    0.0  0.000000   \n",
+       "4            0.0    0.0    1.0    0.0    0.0    0.0    0.0    0.0  0.000000   \n",
+       "5            0.0    0.0    0.0    1.0    0.0    0.0    0.0    0.0  0.000000   \n",
+       "6            0.0    0.0    0.0    0.0    1.0    0.0    0.0    0.0  0.000000   \n",
+       "7            0.0    0.0    0.0    0.0    0.0    1.0    0.0    0.0  0.000000   \n",
+       "8            0.0    0.0    0.0    0.0    0.0    0.0    1.0    0.0  0.000000   \n",
+       "9            0.0    0.0    0.0    0.0    0.0    0.0    0.0    1.0  0.000000   \n",
+       "10           0.0    0.0    0.0    0.0    0.0    0.0    0.0    0.0  1.000000   \n",
+       "11           0.0    0.0    0.0    0.0    0.0    0.0    0.0    0.0  0.328266   \n",
        "\n",
-       "reader_id  10     ...  29991     29992  29993  29994     29995  29996  29997  \\\n",
-       "reader_id         ...                                                          \n",
-       "1            0.0  ...    0.0  0.000000    0.0    0.0  0.082107    0.0    0.0   \n",
-       "2            0.0  ...    0.0  0.000000    0.0    0.0  0.000000    0.0    0.0   \n",
-       "3            0.0  ...    0.0  0.000000    0.0    0.0  0.000000    0.0    0.0   \n",
-       "4            0.0  ...    0.0  0.000000    0.0    0.0  0.000000    0.0    0.0   \n",
-       "5            0.0  ...    0.0  0.016757    0.0    0.0  0.000000    0.0    0.0   \n",
-       "6            0.0  ...    0.0  0.000000    0.0    0.0  0.000000    0.0    0.0   \n",
-       "7            0.0  ...    0.0  0.000000    0.0    0.0  0.000000    0.0    0.0   \n",
-       "8            0.0  ...    0.0  0.000000    0.0    0.0  0.000000    0.0    0.0   \n",
-       "9            0.0  ...    0.0  0.000000    0.0    0.0  0.000000    0.0    0.0   \n",
-       "10           1.0  ...    0.0  0.000000    0.0    0.0  0.000000    0.0    0.0   \n",
+       "reader_id     11     ...  29990  29991  29992  29993  29994  29995  29996  \\\n",
+       "reader_id            ...                                                    \n",
+       "1          0.000000  ...    0.0    0.0    0.0    0.0    0.0    0.0    0.0   \n",
+       "3          0.000000  ...    0.0    0.0    0.0    0.0    0.0    0.0    0.0   \n",
+       "4          0.000000  ...    0.0    0.0    0.0    0.0    0.0    0.0    0.0   \n",
+       "5          0.000000  ...    0.0    0.0    0.0    0.0    0.0    0.0    0.0   \n",
+       "6          0.000000  ...    0.0    0.0    0.0    0.0    0.0    0.0    0.0   \n",
+       "7          0.000000  ...    0.0    0.0    0.0    0.0    0.0    0.0    0.0   \n",
+       "8          0.000000  ...    0.0    0.0    0.0    0.0    0.0    0.0    0.0   \n",
+       "9          0.000000  ...    0.0    0.0    0.0    0.0    0.0    0.0    0.0   \n",
+       "10         0.328266  ...    0.0    0.0    0.0    0.0    0.0    0.0    0.0   \n",
+       "11         1.000000  ...    0.0    0.0    0.0    0.0    0.0    0.0    0.0   \n",
        "\n",
-       "reader_id  29998  29999  30000  \n",
+       "reader_id  29997  29998  29999  \n",
        "reader_id                       \n",
        "1            0.0    0.0    0.0  \n",
-       "2            0.0    0.0    0.0  \n",
        "3            0.0    0.0    0.0  \n",
        "4            0.0    0.0    0.0  \n",
        "5            0.0    0.0    0.0  \n",
@@ -983,8 +982,9 @@
        "8            0.0    0.0    0.0  \n",
        "9            0.0    0.0    0.0  \n",
        "10           0.0    0.0    0.0  \n",
+       "11           0.0    0.0    0.0  \n",
        "\n",
-       "[10 rows x 29975 columns]"
+       "[10 rows x 27027 columns]"
       ]
      },
      "execution_count": 16,
@@ -1008,7 +1008,7 @@
     {
      "data": {
       "text/plain": [
-       "(29975, 29975)"
+       "(27027, 27027)"
       ]
      },
      "execution_count": 17,
@@ -1060,7 +1060,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 19,
    "id": "aac7b275-ee12-46d6-8fd7-113849547f7f",
    "metadata": {},
    "outputs": [],
