updated collaborative filtering notebook and completed hybrid notebook

--- a/rec_sys/hybrid/hybrid.ipynb
+++ b/rec_sys/hybrid/hybrid.ipynb
@@ -17,8 +17,10 @@
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
-    "# from numpy import dot\n",
-    "# from numpy.linalg import norm "
+    "\n",
+    "from sklearn.metrics.pairwise import cosine_similarity\n",
+    "from surprise import SVD, Reader, Dataset\n",
+    "from surprise.model_selection import train_test_split"
    ]
   },
   {
@@ -49,7 +51,7 @@
     {
      "data": {
       "text/plain": [
-       "(300000, 9)"
+       "(100000, 10)"
       ]
      },
      "execution_count": 3,
@@ -98,68 +100,74 @@
        "      <th>publisher_id</th>\n",
        "      <th>publish_year</th>\n",
        "      <th>book_price</th>\n",
+       "      <th>text_lang</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>45</td>\n",
-       "      <td>446</td>\n",
-       "      <td>2</td>\n",
-       "      <td>2272</td>\n",
-       "      <td>553</td>\n",
+       "      <td>655</td>\n",
+       "      <td>52</td>\n",
        "      <td>4</td>\n",
-       "      <td>10</td>\n",
-       "      <td>2004</td>\n",
-       "      <td>23</td>\n",
+       "      <td>11482</td>\n",
+       "      <td>300</td>\n",
+       "      <td>4</td>\n",
+       "      <td>8</td>\n",
+       "      <td>2012</td>\n",
+       "      <td>94</td>\n",
+       "      <td>7</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>2413</td>\n",
-       "      <td>23</td>\n",
-       "      <td>7</td>\n",
-       "      <td>3515</td>\n",
-       "      <td>318</td>\n",
-       "      <td>2</td>\n",
-       "      <td>38</td>\n",
-       "      <td>2015</td>\n",
-       "      <td>15</td>\n",
+       "      <td>2713</td>\n",
+       "      <td>90</td>\n",
+       "      <td>3</td>\n",
+       "      <td>6479</td>\n",
+       "      <td>469</td>\n",
+       "      <td>1</td>\n",
+       "      <td>8</td>\n",
+       "      <td>2012</td>\n",
+       "      <td>33</td>\n",
+       "      <td>5</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>2095</td>\n",
-       "      <td>431</td>\n",
-       "      <td>8</td>\n",
-       "      <td>18547</td>\n",
-       "      <td>208</td>\n",
-       "      <td>3</td>\n",
-       "      <td>48</td>\n",
-       "      <td>2000</td>\n",
-       "      <td>23</td>\n",
+       "      <td>409</td>\n",
+       "      <td>17</td>\n",
+       "      <td>2</td>\n",
+       "      <td>25472</td>\n",
+       "      <td>435</td>\n",
+       "      <td>1</td>\n",
+       "      <td>12</td>\n",
+       "      <td>2001</td>\n",
+       "      <td>196</td>\n",
+       "      <td>4</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>2431</td>\n",
-       "      <td>211</td>\n",
-       "      <td>4</td>\n",
-       "      <td>19675</td>\n",
-       "      <td>340</td>\n",
+       "      <td>1150</td>\n",
+       "      <td>234</td>\n",
        "      <td>10</td>\n",
-       "      <td>34</td>\n",
-       "      <td>2000</td>\n",
-       "      <td>117</td>\n",
+       "      <td>23950</td>\n",
+       "      <td>529</td>\n",
+       "      <td>2</td>\n",
+       "      <td>23</td>\n",
+       "      <td>2019</td>\n",
+       "      <td>79</td>\n",
+       "      <td>2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>2871</td>\n",
-       "      <td>78</td>\n",
-       "      <td>3</td>\n",
-       "      <td>23453</td>\n",
-       "      <td>610</td>\n",
+       "      <td>2424</td>\n",
+       "      <td>390</td>\n",
+       "      <td>5</td>\n",
+       "      <td>13046</td>\n",
+       "      <td>395</td>\n",
        "      <td>2</td>\n",
-       "      <td>24</td>\n",
-       "      <td>2012</td>\n",
-       "      <td>111</td>\n",
+       "      <td>20</td>\n",
+       "      <td>2010</td>\n",
+       "      <td>200</td>\n",
+       "      <td>4</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -167,18 +175,18 @@
       ],
       "text/plain": [
        "   book_id  author_id  book_genre  reader_id  num_pages  book_rating  \\\n",
-       "0       45        446           2       2272        553            4   \n",
-       "1     2413         23           7       3515        318            2   \n",
-       "2     2095        431           8      18547        208            3   \n",
-       "3     2431        211           4      19675        340           10   \n",
-       "4     2871         78           3      23453        610            2   \n",
+       "0      655         52           4      11482        300            4   \n",
+       "1     2713         90           3       6479        469            1   \n",
+       "2      409         17           2      25472        435            1   \n",
+       "3     1150        234          10      23950        529            2   \n",
+       "4     2424        390           5      13046        395            2   \n",
        "\n",
-       "   publisher_id  publish_year  book_price  \n",
-       "0            10          2004          23  \n",
-       "1            38          2015          15  \n",
-       "2            48          2000          23  \n",
-       "3            34          2000         117  \n",
-       "4            24          2012         111  "
+       "   publisher_id  publish_year  book_price  text_lang  \n",
+       "0             8          2012          94          7  \n",
+       "1             8          2012          33          5  \n",
+       "2            12          2001         196          4  \n",
+       "3            23          2019          79          2  \n",
+       "4            20          2010         200          4  "
       ]
      },
      "execution_count": 4,
@@ -191,41 +199,259 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "083fb85c-d464-47d0-90f2-a4da97af79ed",
+   "cell_type": "markdown",
+   "id": "4d002ecd-dc49-4611-81fc-86f3cdc42809",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## Flow\n",
+    "1. Take in a book_id and user_id as input\n",
+    "2. Use a content-based model to compute the 50 most similar books\n",
+    "3. Compute the predicted ratings that the user might give these 50 books using a collaborative filter\n",
+    "4. Return the top n books with the highest predicted rating"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "ac72927d-b1ab-42f1-9730-7652b5c10cdf",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "rmat = df.pivot_table(\n",
+    "    columns = 'book_id',\n",
+    "    index = 'reader_id',\n",
+    "    values = 'book_rating'\n",
+    ").fillna(0)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "1ae986af-9331-4ab1-bd9a-e4fc9aea4492",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 6min 12s, sys: 1min 38s, total: 7min 50s\n",
+      "Wall time: 1min 36s\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%time\n",
+    "#Compute the cosine similarity matrix using the dummy ratings matrix\n",
+    "cosine_sim = cosine_similarity(rmat, rmat)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "e1b64468-f520-41ea-ae15-7f5923ffab51",
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 29.3 ms, sys: 11.3 ms, total: 40.6 ms\n",
+      "Wall time: 7.4 ms\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%time\n",
+    "#Convert into pandas dataframe\n",
+    "cosine_sim = pd.DataFrame(cosine_sim, index=rmat.index, columns=rmat.index)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "09f01d35-3555-4b07-96fe-d7eae0076700",
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#Build the SVD based Collaborative filter\n",
+    "reader = Reader()\n",
+    "data = Dataset.load_from_df(df[['reader_id', 'book_id', 'book_rating']], reader)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "6b26da98-8d0c-47c6-9522-2c288fa3a11f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Splitting the dataset\n",
+    "trainset, testset = train_test_split(data, test_size=0.3,random_state=10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "953c2da7-cc57-48d9-9e32-ce25f4386de3",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<surprise.prediction_algorithms.matrix_factorization.SVD at 0x7fae082a17f0>"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "svd = SVD()\n",
+    "svd.fit(trainset)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "id": "108e3c98-4b33-4c6d-a50b-387ed41929f6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def hybrid(reader_id, book_id, n_recs):\n",
+    "    sim_scores = list(enumerate(cosine_sim[int(book_id)]))\n",
+    "    \n",
+    "    #Sort the (index, score) tuples in decreasing order of similarity scores\n",
+    "    sim_scores = sorted(sim_scores, key=lambda x: x[1], reverse=True)\n",
+    "    \n",
+    "    #Select the top 50 tuples, excluding the first \n",
+    "    #(as it is the similarity score of the movie with itself)\n",
+    "    sim_scores = sim_scores[1:50]\n",
+    "    \n",
+    "    #Store the cosine_sim indices of the top 25 movies in a list\n",
+    "    book_indices = [i[0] for i in sim_scores]\n",
+    "\n",
+    "    #Extract the metadata of the aforementioned movies\n",
+    "    books = df.iloc[book_indices][['book_id', 'book_rating', 'num_pages', 'publish_year', 'book_price', 'reader_id']]\n",
+    "    \n",
+    "    #Compute the predicted ratings using the SVD filter\n",
+    "    books['est'] = books.apply(lambda x: svd.predict(reader_id, x['book_id'], x['book_rating']).est, axis = 1)\n",
+    "    \n",
+    "    #Sort the movies in decreasing order of predicted rating\n",
+    "    books = books.sort_values('est', ascending=False)\n",
+    "    \n",
+    "    #Return the top 10 movies as recommendations\n",
+    "    return books.head(n_recs)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "id": "fb8939c8-ce0a-404a-8298-623f249705ac",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>book_id</th>\n",
+       "      <th>book_rating</th>\n",
+       "      <th>num_pages</th>\n",
+       "      <th>publish_year</th>\n",
+       "      <th>book_price</th>\n",
+       "      <th>reader_id</th>\n",
+       "      <th>est</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>8806</th>\n",
+       "      <td>2488</td>\n",
+       "      <td>7</td>\n",
+       "      <td>637</td>\n",
+       "      <td>2001</td>\n",
+       "      <td>198</td>\n",
+       "      <td>4411</td>\n",
+       "      <td>5.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8292</th>\n",
+       "      <td>502</td>\n",
+       "      <td>9</td>\n",
+       "      <td>298</td>\n",
+       "      <td>2019</td>\n",
+       "      <td>81</td>\n",
+       "      <td>27627</td>\n",
+       "      <td>5.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>23621</th>\n",
+       "      <td>1184</td>\n",
+       "      <td>7</td>\n",
+       "      <td>403</td>\n",
+       "      <td>2013</td>\n",
+       "      <td>88</td>\n",
+       "      <td>16860</td>\n",
+       "      <td>5.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16789</th>\n",
+       "      <td>2293</td>\n",
+       "      <td>7</td>\n",
+       "      <td>573</td>\n",
+       "      <td>2021</td>\n",
+       "      <td>166</td>\n",
+       "      <td>9000</td>\n",
+       "      <td>5.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       book_id  book_rating  num_pages  publish_year  book_price  reader_id  \\\n",
+       "8806      2488            7        637          2001         198       4411   \n",
+       "8292       502            9        298          2019          81      27627   \n",
+       "23621     1184            7        403          2013          88      16860   \n",
+       "16789     2293            7        573          2021         166       9000   \n",
+       "\n",
+       "       est  \n",
+       "8806   5.0  \n",
+       "8292   5.0  \n",
+       "23621  5.0  \n",
+       "16789  5.0  "
+      ]
+     },
+     "execution_count": 64,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "hybrid(25433,2324,4)"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "85c41fb1-f8b7-47aa-88b3-6919bfbb05cb",
+   "id": "ed05389f-dcf5-4ada-a8ec-6122f8c179b6",
    "metadata": {},
    "outputs": [],
    "source": []
